# file-organizer

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cli.rs  error.rs  lib.rs  main.rs  tui.rs
