[package]
name = "organizer"
version = "0.2.0"
authors = ["Mark Doh <mark.elorm.doh@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mime_guess = "2.0.3"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.17"
colored = "2.1"
ratatui = "0.28"
crossterm = "0.28"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

